<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="start_after_boot" type="id" />
    <item name="open_miui_home" type="id" />
    <item name="apps_home" type="id" />
    <item name="apps_grid" type="id" />
    <item name="apps_header" type="id" />
    <item name="tag_claims_page_gesture" type="id" />
</resources>
